jetpack compose demos, livedata/flow/viewmodel demos, experimental api

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "BP"
+rootProject.name = "JetpackComposeTestProject"
 include ':app'
