--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,11 @@ import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // Better navigation - Parcels
     id("kotlin-parcelize")
+    // Hilt
+    id("kotlin-kapt")
+    id("com.google.dagger.hilt.android")
 }
 
 android {
@@ -49,6 +53,10 @@ android {
     }
 }
 
+// Hilt - Allow references to generated code
+kapt {
+    correctErrorTypes = true
+}
 
 dependencies {
 
@@ -60,15 +68,22 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'com.google.accompanist:accompanist-permissions:0.28.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Accompanist - permissions
+    implementation 'com.google.accompanist:accompanist-permissions:0.28.0'
+
+    // Hilt
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
 }
 
+// ExperimentalMaterial3Api Opt-In for the whole module
 tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
