--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,14 +59,12 @@ kapt {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -74,8 +72,12 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+    // Navigation
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+
     // Getting ViewModel in composable context
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
     // Safely collect flows in compose
     implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03'
 
@@ -83,8 +85,11 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-permissions:0.28.0'
 
     // Hilt
-    implementation("com.google.dagger:hilt-android:2.44")
-    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 }
 
 // ExperimentalMaterial3Api Opt-In for the whole module
