--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,14 @@ dependencies {
 //    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03' // no longer required in newer versions of hilt.
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
+
+    // Location Services
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
 
 // ExperimentalMaterial3Api Opt-In for the whole module
