--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,45 +59,42 @@ kapt {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    // AndroidX
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_runtime_version"
+    implementation "androidx.activity:activity-compose:$activity_version"
+    // Testing
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$junit_espresso_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-
-    // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
-
+    // Jetpack Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material3:material3:$mateiral3_version"
     // Getting ViewModel in composable context
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_lifecycle_version"
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$compose_navigation_version"
     // Safely collect flows in compose
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03'
-
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$compose_lifecycle_runtime_version"
     // Accompanist - permissions
-    implementation 'com.google.accompanist:accompanist-permissions:0.28.0'
-
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_permissions_version"
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44'
-//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03' // no longer required in newer versions of hilt.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_navigation_version"
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
-
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
     // Location Services
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "com.google.android.gms:play-services-location:$google_location_serivices_version"
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
 }
 
 // ExperimentalMaterial3Api Opt-In for the whole module
