--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 buildscript {
     ext {
+        core_version = '1.9.0'
         compose_version = '1.3.2'
+        hilt_version = '2.44'
+        hilt_navigation_version = '1.0.0'
+        accompanist_permissions_version = '0.28.0'
+        compose_lifecycle_runtime_version = '2.6.0-alpha03'
+        androidx_lifecycle_runtime_version = '2.5.1'
+        mateiral3_version = '1.1.0-alpha03'
+        retrofit_version = '2.9.0'
+        logging_interceptor_version = '5.0.0-alpha.3'
+        google_location_serivices_version = '21.0.1'
+        room_version = '2.4.3'
+        activity_version = '1.6.1'
+        junit_version = '4.13.2'
+        junit_ext_version = '1.1.4'
+        junit_espresso_version = '3.5.0'
+        viewmodel_lifecycle_version = '2.5.1'
+        compose_navigation_version = '2.5.3'
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
