--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$google_location_serivices_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
 
 // ExperimentalMaterial3Api Opt-In for the whole module
