--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ buildscript {
         junit_espresso_version = '3.5.0'
         viewmodel_lifecycle_version = '2.5.1'
         compose_navigation_version = '2.5.3'
+        multidex_version = "2.0.1"
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
