--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$androidx_lifecycle_runtime_version"
     implementation "androidx.activity:activity-compose:$activity_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     // Testing dependencies
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
@@ -100,15 +101,15 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     // Google Sign In SDK
-    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation "com.google.android.gms:play-services-auth:$google_sign_in_sdk_version"
     // Firebase SDK
-    implementation platform('com.google.firebase:firebase-bom:30.3.2')
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
+    implementation "com.google.firebase:firebase-firestore-ktx:$firestore_version"
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // Firebase UI Library
-    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+    implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_auth_version"
 
 //    implementation 'androidx.core:core-ktx:1.7.0'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
