--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         compose_version = '1.3.2'
         hilt_version = '2.44'
         hilt_navigation_version = '1.0.0'
-        accompanist_permissions_version = '0.28.0'
+        accompanist_version = '0.28.0'
         appcompat_version = '1.5.1'
         compose_lifecycle_runtime_version = '2.6.0-alpha03'
         androidx_lifecycle_runtime_version = '2.5.1'
@@ -24,6 +24,7 @@ buildscript {
         firebase_ui_auth_version = '8.0.1'
         firestore_version = '24.4.1' // don't let bom specify version since we need new features
         google_sign_in_sdk_version = '20.4.0'
+        core_splashscreen_version = '1.0.0'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
