--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
         firestore_version = '24.4.1' // don't let bom specify version since we need new features
         google_sign_in_sdk_version = '20.4.0'
         core_splashscreen_version = '1.0.0'
+        coil_version = '2.2.2'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
