--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,27 @@
 buildscript {
     ext {
         core_version = '1.9.0'
-        compose_version = '1.3.2'
-        hilt_version = '2.44'
+        compose_version = '1.3.3'
+        hilt_version = '2.44.2'
         hilt_navigation_version = '1.0.0'
         accompanist_version = '0.28.0'
-        appcompat_version = '1.5.1'
-        compose_lifecycle_runtime_version = '2.6.0-alpha03'
+        appcompat_version = '1.6.0'
+        compose_lifecycle_runtime_version = '2.6.0-alpha04'
         androidx_lifecycle_runtime_version = '2.5.1'
-        mateiral3_version = '1.1.0-alpha03'
+        mateiral3_version = '1.1.0-alpha04'
         retrofit_version = '2.9.0'
         logging_interceptor_version = '5.0.0-alpha.3'
         google_location_serivices_version = '21.0.1'
         room_version = '2.5.0'
         activity_version = '1.6.1'
         junit_version = '4.13.2'
-        junit_ext_version = '1.1.4'
-        junit_espresso_version = '3.5.0'
+        junit_ext_version = '1.1.5'
+        junit_espresso_version = '3.5.1'
         viewmodel_lifecycle_version = '2.5.1'
         compose_navigation_version = '2.5.3'
         multidex_version = '2.0.1'
-        firebase_bom_version = '30.3.2'
-        firebase_ui_auth_version = '8.0.1'
+        firebase_bom_version = '31.1.1'
+        firebase_ui_auth_version = '8.0.2'
         firestore_version = '24.4.1' // don't let bom specify version since we need new features
         google_sign_in_sdk_version = '20.4.0'
         core_splashscreen_version = '1.0.0'
@@ -33,6 +33,7 @@ buildscript {
     }
     dependencies {
         classpath "com.google.gms:google-services:4.3.14"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
