--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,7 @@ buildscript {
         compose_lifecycle_runtime_version = '2.6.0-alpha04'
         androidx_lifecycle_runtime_version = '2.5.1'
         mateiral3_version = '1.1.0-alpha04'
-        retrofit_version = '2.9.0'
-        logging_interceptor_version = '5.0.0-alpha.3'
         google_location_serivices_version = '21.0.1'
-        room_version = '2.5.0'
         activity_version = '1.6.1'
         junit_version = '4.13.2'
         junit_ext_version = '1.1.5'
@@ -40,6 +37,6 @@ plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    // Hilt
+    // Hilt - DI
     id("com.google.dagger.hilt.android") version "2.44" apply false
 }
