--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,45 @@
 buildscript {
     ext {
-        core_version = '1.9.0'
-        compose_version = '1.3.3'
-        hilt_version = '2.44.2'
+        core_version = '1.10.0'
+        compose_version = '1.4.1'
+        hilt_version = '2.45'
         hilt_navigation_version = '1.0.0'
         accompanist_version = '0.28.0'
-        appcompat_version = '1.6.0'
-        compose_lifecycle_runtime_version = '2.6.0-alpha04'
-        androidx_lifecycle_runtime_version = '2.5.1'
-        mateiral3_version = '1.1.0-alpha04'
+        appcompat_version = '1.6.1'
+        compose_lifecycle_runtime_version = '2.6.1'
+        androidx_lifecycle_runtime_version = '2.6.1'
+        mateiral3_version = '1.1.0-beta02'
         google_location_serivices_version = '21.0.1'
-        activity_version = '1.6.1'
+        google_map_serivices_version = '18.1.0'
+        activity_version = '1.7.0'
         junit_version = '4.13.2'
         junit_ext_version = '1.1.5'
         junit_espresso_version = '3.5.1'
-        viewmodel_lifecycle_version = '2.5.1'
+        viewmodel_lifecycle_version = '2.6.1'
         compose_navigation_version = '2.5.3'
         multidex_version = '2.0.1'
-        firebase_bom_version = '31.1.1'
+        firebase_bom_version = '31.4.0'
         firebase_ui_auth_version = '8.0.2'
-        firestore_version = '24.4.1' // don't let bom specify version since we need new features
-        google_sign_in_sdk_version = '20.4.0'
+        firestore_version = '24.4.5' // don't let bom specify version since we need new features
+        google_sign_in_sdk_version = '20.5.0'
         core_splashscreen_version = '1.0.0'
-        coil_version = '2.2.2'
+        coil_version = '2.3.0'
         maxkeppeler_dialogs_version = '1.0.3'
     }
     repositories {
+        gradlePluginPortal()
+        google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.google.gms:google-services:4.3.14"
+        classpath "com.google.gms:google-services:4.3.15"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     // Hilt - DI
     id("com.google.dagger.hilt.android") version "2.44" apply false
 }
