project structure refactor

--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,7 @@ plugins {
     // Hilt - DI
     id("com.google.dagger.hilt.android") version "2.44" apply false
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
