--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,29 +2,29 @@ import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
 
 plugins {
     // Core
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
     // Better navigation - allows to parcelize objects and use them in navigation
     id("kotlin-parcelize")
     // Hilt - DI
     id("kotlin-kapt")
     id("com.google.dagger.hilt.android")
     // Firebase - storage, auth, analytics, firestore, etc..
-    id 'com.google.gms.google-services'
+    id "com.google.gms.google-services"
     // Serialization for Proto Datastore
-    id 'org.jetbrains.kotlin.plugin.serialization'
+    id "org.jetbrains.kotlin.plugin.serialization"
 }
 
 
 android {
-    namespace 'cz.zcu.students.lostandfound'
+    namespace "cz.zcu.students.lostandfound"
     compileSdk 33
 
     defaultConfig {
         // So we can access variables from local.properties in manifest
         Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
-        manifestPlaceholders = [MAPS_API_KEY: "${properties.getProperty('MAPS_API_KEY')}"]
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        manifestPlaceholders = [MAPS_API_KEY: "${properties.getProperty("MAPS_API_KEY")}"]
 
         applicationId "cz.zcu.students.lostandfound"
         minSdk 31
@@ -41,7 +41,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
@@ -55,11 +55,11 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     packagingOptions {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
 }
@@ -80,13 +80,6 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     // Jetpack Compose - Material 3
     implementation "androidx.compose.material3:material3:$mateiral3_version"
-    // Testing
-    testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$junit_espresso_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     // ViewModel utilities for Compose - getting reference of ViewModel in Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_lifecycle_version"
     // Compose Navigation - navigate between Composables
@@ -110,9 +103,9 @@ dependencies {
     // Maps Compose library
     implementation "com.google.maps.android:maps-compose:2.11.4"
     // KTX for the Maps SDK for Android
-    implementation 'com.google.maps.android:maps-ktx:3.4.0'
+    implementation "com.google.maps.android:maps-ktx:3.4.0"
     // KTX for the Maps SDK for Android Utility Library
-    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+    implementation "com.google.maps.android:maps-utils-ktx:3.4.0"
     // Integrating of Google Sign-In SDK
     implementation "com.google.android.gms:play-services-auth:$google_sign_in_sdk_version"
     // Firebase SDK - storage, auth, analytics, firestore, maintained by BOM
@@ -132,13 +125,48 @@ dependencies {
     // objects with protocol buffers.
     implementation "androidx.datastore:datastore:1.0.0"
     //          DO NOT CHANGE: Kotlin 1.7.20 is used by default
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
     // Saving lists in Proto Datastore
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
     // Livedata
     implementation("androidx.compose.runtime:runtime-livedata:1.4.1")
 
-    // ======================================= 3RD PARTY ===========================================
+    // ===========================================================================================//
+    //                                        TESTS                                               //
+    // ===========================================================================================//
+
+    // LOCAL UNIT TESTS
+
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+    testImplementation "io.mockk:mockk:1.10.5"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // INSTRUMENTATION TESTS
+
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.37"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.45"
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+    androidTestImplementation "androidx.test:core-ktx:1.5.0"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+    androidTestImplementation "io.mockk:mockk-android:1.10.5"
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$junit_espresso_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    // ===========================================================================================//
+    //                                       3RD PARTY                                            //
+    // ===========================================================================================//
+
     // Compose Dialogs - https://github.com/maxkeppeler/sheets-compose-dialogs
     implementation "com.maxkeppeler.sheets-compose-dialogs:core:$maxkeppeler_dialogs_version"
     implementation "com.maxkeppeler.sheets-compose-dialogs:list:$maxkeppeler_dialogs_version"
