--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // Custom test runner - we use Hilt for DI
+        testInstrumentationRunner "cz.zcu.students.lostandfound.HiltTestRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -138,12 +139,12 @@ dependencies {
     // LOCAL UNIT TESTS
 
     testImplementation "androidx.test:core:1.5.0"
-    testImplementation "junit:junit:$junit_version"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
     testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-    testImplementation "io.mockk:mockk:1.10.5"
+//    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+//    testImplementation "io.mockk:mockk:1.10.5"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -157,8 +158,8 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     androidTestImplementation "androidx.test:core-ktx:1.5.0"
-    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-    androidTestImplementation "io.mockk:mockk-android:1.10.5"
+//    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+//    androidTestImplementation "io.mockk:mockk-android:1.10.5"
     androidTestImplementation "androidx.test:runner:1.5.2"
     androidTestImplementation "androidx.test.espresso:espresso-core:$junit_espresso_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
